# sfml-bartop-template

./: CMakeLists.txt  main.cpp
include/: BartopGame.hpp  Controller.hpp
sfml-client/: Makefile
src/: BartopGame.cpp  Controller.cpp  program.cpp
